Update INSTALL_Logstash_6.8.23.md